fix: mobile consistency and horizontal scroll

--- a/webapp/src/components/EstateDetailPage/EditEstateMetadata/EditEstateMetadataForm/EditEstateMetadataForm.css
+++ b/webapp/src/components/EstateDetailPage/EditEstateMetadata/EditEstateMetadataForm/EditEstateMetadataForm.css
@@ -1,7 +1,3 @@
 .EditEstateMetadataForm {
   width: 100%;
 }
-
-.EditEstateMetadataForm .ui.button + .ui.button {
-  margin-left: 20px;
-}
